defined solar api  Please enter the commit message for your changes. Lines starting
